# Cunder

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  lint-clang-format.sh
.github/workflows/: format.yml  unittest.yml
Cunder/: CMakeLists.txt  c_libtorch.cpp  c_libtorch.h
Cunder/include/Cunder/: c_libtorch.h
Cunder/src/Cunder/: c_libtorch.cpp
cunder-data/: model.pt  model.py  model_2_input_3_output.pt  model_2_input_3_output.py
playground/: CMakeLists.txt  main.c  main.cpp
unittests/: CMakeLists.txt  test-cunder.c  test-cunder.cpp  test-main.cpp
unittests/data/: model.pt  model.py  model_2_input_3_output.pt  model_2_input_3_output.py
